--- a/style.css
+++ b/style.css
@@ -32,3 +32,14 @@ tr:nth-child(even){
     display: inline-block;
     font-size: 16px;
 }
+
+.button-comments{
+    background-color: #008CBA; /* Blue */
+    border: none;
+    color: white;
+    padding: 10px 12px;
+    text-align:center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
