--- a/style.css
+++ b/style.css
@@ -33,6 +33,14 @@ tr:nth-child(even){
     font-size: 16px;
 }
 
+.button-posts:active{
+    background: none;
+}
+
+.button-posts:hover{
+    cursor: pointer;
+}
+
 .button-comments{
     background-color: #008CBA; /* Blue */
     border: none;
